--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Bladimir Moyano
-logo: assets/images/profile_pic.jpg
+logo: assets/images/querry-7.PNG
 show_downloads: true
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
